--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-QUEER ALL YEAR
+<!doctype html>
+<html class="no-js" lang="" style="background-color: #badbff;">
+
+<head>
+  <meta charset="utf-8">
+  <title>Queer all year</title>
+  <meta name="description" content="Wir sind nicht nur gay for one day, wir sind queer all year!">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="shortcut icon" type="image/png" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/fonts.css">
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+  <div class="screenbox">
+    <img id="mainlogo" src="img/logo_shadow.svg" alt="Queer all year">
+  </div>
+  <div class="screenbox">
+    <div class="innerbox">
+      <h1>Wir sind nicht nur gay for one day,<br>wir sind queer all year!</h1>
+      <p>
+        Das Sommerlochfestival ist der Braunschweiger Christopher Street Day - kurz: CSD - und findes jedes Jahr unter
+        einem anderen Motto statt.
+      </p>
+      <p>
+        Im Jahr 2019 lautet es "Gay for one Day". Die CSD-Orga selbst <a
+          href="https://www.csd-braunschweig.de/mach-mit/sei-gay-for-one-day/">gibt zu</a>:
+      </p>
+      <p class="moneyquote">
+        „Über unser Motto lässt sich streiten. Und genau das möchten wir.“
+      </p>
+      <p>
+        Wir nehmen diese Einladung gerne an.
+      </p>
+      <p>
+        Denn wir sind nicht nur gay, sondern auch lesbisch, bi, pan, asexuell,
+        trans, polyamor, oder auch einfach: queer.
+      </p>
+      <p>
+        Wir haben nicht immer Grund, fröhlich zu sein. Wir kämpfen nach wie vor um Sichtbarkeit, Anerkennung, Aufklärung und körperliche Selbstbestimmung.
+      </p>
+      <p>
+          An jedem einzelnen Tag.
+      </p>
+    </div>
+  </div>
+  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
+  <script src="js/vendor/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
+</html>
