--- a/index.html
+++ b/index.html
@@ -28,31 +28,34 @@
   </div>
   <div class="screenbox">
     <div class="innerbox">
-      <h1>Wir sind nicht nur gay for one day,<br>wir sind queer all year!</h1>
-      <p>
-        Das Sommerlochfestival ist der Braunschweiger Christopher Street Day - kurz: CSD - und findes jedes Jahr unter
-        einem anderen Motto statt.
-      </p>
-      <p>
-        Im Jahr 2019 lautet es "Gay for one Day". Die CSD-Orga selbst <a
-          href="https://www.csd-braunschweig.de/mach-mit/sei-gay-for-one-day/">gibt zu</a>:
-      </p>
-      <p class="moneyquote">
-        „Über unser Motto lässt sich streiten. Und genau das möchten wir.“
-      </p>
-      <p>
-        Wir nehmen diese Einladung gerne an.
-      </p>
-      <p>
-        Denn wir sind nicht nur gay, sondern auch lesbisch, bi, pan, asexuell,
-        trans, polyamor, oder auch einfach: queer.
-      </p>
-      <p>
-        Wir haben nicht immer Grund, fröhlich zu sein. Wir kämpfen nach wie vor um Sichtbarkeit, Anerkennung, Aufklärung und körperliche Selbstbestimmung.
-      </p>
-      <p>
+      <div class="innerinnerbox">
+        <h1>Wir sind nicht nur gay for one day,<br>wir sind queer all year!</h1>
+        <p>
+          Das Sommerlochfestival ist der Braunschweiger Christopher Street Day - kurz: CSD - und findes jedes Jahr unter
+          einem anderen Motto statt.
+        </p>
+        <p>
+          Im Jahr 2019 lautet es "Gay for one Day". <a
+            href="https://www.csd-braunschweig.de/mach-mit/sei-gay-for-one-day/">Die CSD-Orga sagt selbst</a>:
+        </p>
+        <p class="moneyquote">
+          „Über unser Motto lässt sich streiten. Und genau das möchten wir.“
+        </p>
+        <p>
+          Wir nehmen diese Einladung gerne an.
+        </p>
+        <p>
+          Denn wir sind nicht nur gay, sondern auch lesbisch, bi, pan, asexuell,
+          trans, polyamor, oder auch einfach: queer.
+        </p>
+        <p>
+          Wir haben nicht immer Grund, fröhlich zu sein. Wir kämpfen nach wie vor um Sichtbarkeit, Anerkennung,
+          Aufklärung und körperliche Selbstbestimmung.
+        </p>
+        <p>
           An jedem einzelnen Tag.
-      </p>
+        </p>
+      </div>
     </div>
   </div>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
