--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <div class="screenbox">
-    <img id="mainlogo" src="img/logo_shadow.svg" alt="Queer all year">
+    <img id="mainlogo" src="img/logo.svg" alt="Queer all year">
   </div>
   <div class="screenbox">
     <div class="innerbox">
