Reorganized directory structure

--- a/web/index.html
+++ b/web/index.html
@@ -24,8 +24,8 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <div class="screenbox">
-    <!-- <img id="mainlogo" src="img/logo.svg" alt="Queer all year"> -->
-    <?php include('img/logo.svg'); ?>
+    <!-- The next line will be replaces with the inlined SVG-file, but don't change it! -->
+    <img id="mainlogo" src="img/logo.svg" alt="Queer all year">
   </div>
   <div class="screenbox">
     <div class="innerbox">
