--- a/web/index.html
+++ b/web/index.html
@@ -64,6 +64,7 @@
     crossorigin="anonymous"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/modules.js"></script>
 </body>
 
 </html>
