Actually runable as cmd or in the browser, using different main files.

--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@
           Wir nehmen diese Einladung gerne an.
         </p>
         <p>
-          Denn wir sind nicht nur gay, sondern auch lesbisch, bi, pan, asexuell,
+          Denn wir sind nicht nur gay, sondern auch lesbisch, <a href="#" onclick="showflag('bi');">bi</a>,  <a href="#" onclick="showflag('pan');">pan</a>, asexuell,
           trans, polyamor, oder auch einfach: queer.
         </p>
         <p>
@@ -63,7 +63,6 @@
   <script src="js/vendor/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
   <script src="js/modules.js"></script>
 </body>
 
