--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <div class="screenbox">
-    <!-- The next line will be replaces with the inlined SVG-file, but don't change it! -->
+    <!-- The next line will be replaced with the inlined SVG-file, but don't change it! -->
     <img id="mainlogo" src="img/logo.svg" alt="Queer all year">
   </div>
   <div class="screenbox">
