Added shadow, scrolling indicator, indentity labels

--- a/web/index.html
+++ b/web/index.html
@@ -25,12 +25,15 @@
   <![endif]-->
   <div class="screenbox">
     <!-- The next line will be replaced with the inlined SVG-file, but don't change it! -->
+    <img id="shadow" src="img/logo_shadow.svg" alt="Queer all year">
     <img id="mainlogo" src="img/logo.svg" alt="Queer all year">
+    <div id="identity">(Gay)</div>
+    <div id="arrow"><a href="#" onclick="queer.scrollDown(); return false;">⇣</a></div>
   </div>
   <div class="screenbox">
     <div class="innerbox">
       <div class="innerinnerbox">
-        <h1>Wir sind nicht nur gay for one day,<br>wir sind queer all year!</h1>
+        <h1 id="firstHeading">Wir sind nicht nur gay for one day,<br>wir sind queer all year!</h1>
         <p>
           Das Sommerlochfestival ist der Braunschweiger Christopher Street Day - kurz: CSD - und findes jedes Jahr unter
           einem anderen Motto statt.
@@ -46,7 +49,7 @@
           Wir nehmen diese Einladung gerne an.
         </p>
         <p>
-          Denn wir sind nicht nur gay, sondern auch lesbisch, <a href="#" onclick="showflag('bi');">bi</a>,  <a href="#" onclick="showflag('pan');">pan</a>, asexuell,
+          Denn wir sind nicht nur gay, sondern auch lesbisch, bi, pan, asexuell,
           trans, polyamor, oder auch einfach: queer.
         </p>
         <p>
