Fixed flags and typos.

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
       <div class="innerinnerbox">
         <h1 id="firstHeading">Wir sind nicht nur gay for one day,<br>wir sind queer all year!</h1>
         <p>
-          Das Sommerlochfestival ist der Braunschweiger Christopher Street Day - kurz: CSD - und findes jedes Jahr unter
+          Das Sommerlochfestival ist der Braunschweiger <acronym title="Christopher Street Day">CSD</acronym> und findet jedes Jahr unter
           einem anderen Motto statt.
         </p>
         <p>
