Twitter card test.

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,12 @@
   <meta name="description" content="Wir sind nicht nur gay for one day, wir sind queer all year!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator" content="@LenaSchimmel">
+  <meta name="twitter:title" content="Queer All Year">
+  <meta name="twitter:description" content="Wir sind nicht nur gay, sondern auch lesbisch, bi, pan, asexuell, trans, polyamor, oder auch einfach: queer. Wir haben nicht immer Grund, fröhlich zu sein. Wir kämpfen nach wie vor um Sichtbarkeit, Anerkennung, Aufklärung und körperliche Selbstbestimmung.">
+  <meta name="twitter:image" content="http://queerallyear.de/img/preview.png">
+
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="shortcut icon" type="image/png" href="icon.png">
