--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:creator" content="@LenaSchimmel">
   <meta name="twitter:title" content="Queer All Year">
   <meta name="twitter:description" content="Wir sind nicht nur gay, sondern auch lesbisch, bi, pan, asexuell, trans, polyamor, oder auch einfach: queer. Wir haben nicht immer Grund, fröhlich zu sein. Wir kämpfen nach wie vor um Sichtbarkeit, Anerkennung, Aufklärung und körperliche Selbstbestimmung.">
-  <meta name="twitter:image" content="http://queerallyear.de/img/preview.png">
+  <meta name="twitter:image" content="http://queerallyear.de/img/preview.jpg">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
