--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:creator" content="@LenaSchimmel">
-  <meta name="twitter:title" content="Queer All Year">
+  <meta name="twitter:title" content="Gay for one Day? Queer all Year!">
   <meta name="twitter:description" content="Wir sind nicht nur gay, sondern auch lesbisch, bi, pan, asexuell, trans, polyamor, oder auch einfach: queer. Wir haben nicht immer Grund, fröhlich zu sein. Wir kämpfen nach wie vor um Sichtbarkeit, Anerkennung, Aufklärung und körperliche Selbstbestimmung.">
   <meta name="twitter:image" content="http://queerallyear.de/img/preview.jpg">
 
